@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBD-mysql
-version:      4.009
+version:      4.010
 version_from: lib/DBD/mysql.pm
 installdirs:  site
 requires:
